--- a/OraChallenge/Base.lproj/Main.storyboard
+++ b/OraChallenge/Base.lproj/Main.storyboard
@@ -172,7 +172,7 @@
                                     <constraint firstAttribute="height" constant="30" id="QHg-pB-Qck"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PFU-gI-IUG">
                                 <rect key="frame" x="108" y="294" width="472" height="30"/>
@@ -180,7 +180,7 @@
                                     <constraint firstAttribute="height" constant="30" id="lyr-zP-O5O"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7De-gU-j5J">
                                 <rect key="frame" x="20" y="184" width="80" height="21"/>
