--- a/OraChallenge/Base.lproj/Main.storyboard
+++ b/OraChallenge/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="2D6-d4-Zvz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="04q-EF-qo6">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -125,6 +125,7 @@
                         <outlet property="emailTextField" destination="XtG-gG-gZC" id="9Qf-Zn-9y2"/>
                         <outlet property="passwordTextField" destination="Mhg-bo-gob" id="pEt-Oo-CRV"/>
                         <segue destination="f9s-oD-GjJ" kind="presentation" identifier="toRegister" id="fdh-aI-scc"/>
+                        <segue destination="2D6-d4-Zvz" kind="show" identifier="toTabBar" id="ukL-24-ghY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -144,14 +145,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_ora.png" translatesAutoresizingMaskIntoConstraints="NO" id="L16-jF-sFO">
-                                <rect key="frame" x="220" y="50" width="160" height="62"/>
+                                <rect key="frame" x="220" y="114" width="160" height="62"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="62" id="1na-Am-3yd"/>
                                     <constraint firstAttribute="width" constant="160" id="GZB-ZX-Asg"/>
                                 </constraints>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DDU-0Z-x9S">
-                                <rect key="frame" x="108" y="180" width="472" height="30"/>
+                                <rect key="frame" x="108" y="244" width="472" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="uFj-rd-h0b"/>
                                 </constraints>
@@ -159,7 +160,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rwa-Bd-D7T">
-                                <rect key="frame" x="108" y="218" width="472" height="30"/>
+                                <rect key="frame" x="108" y="282" width="472" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="C5G-zH-fwW"/>
                                 </constraints>
@@ -167,7 +168,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="038-kF-zA1">
-                                <rect key="frame" x="108" y="256" width="472" height="30"/>
+                                <rect key="frame" x="108" y="320" width="472" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="QHg-pB-Qck"/>
                                 </constraints>
@@ -175,7 +176,7 @@
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PFU-gI-IUG">
-                                <rect key="frame" x="108" y="294" width="472" height="30"/>
+                                <rect key="frame" x="108" y="358" width="472" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="lyr-zP-O5O"/>
                                 </constraints>
@@ -183,7 +184,7 @@
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7De-gU-j5J">
-                                <rect key="frame" x="20" y="184" width="80" height="21"/>
+                                <rect key="frame" x="20" y="248" width="80" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="WFV-qY-Jhy"/>
                                 </constraints>
@@ -192,7 +193,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aPe-2a-czL">
-                                <rect key="frame" x="20" y="222" width="80" height="21"/>
+                                <rect key="frame" x="20" y="286" width="80" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="GTW-UQ-2Pt"/>
                                 </constraints>
@@ -201,7 +202,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yp2-ef-YXh">
-                                <rect key="frame" x="20" y="260" width="80" height="21"/>
+                                <rect key="frame" x="20" y="324" width="80" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="Z2z-8h-tCd"/>
                                 </constraints>
@@ -210,7 +211,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Confirm" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o78-QY-Mjn">
-                                <rect key="frame" x="20" y="298" width="80" height="21"/>
+                                <rect key="frame" x="20" y="362" width="80" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="11I-V4-ZYC"/>
                                 </constraints>
@@ -219,7 +220,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="UIf-wU-Xb7">
-                                <rect key="frame" x="216" y="332" width="168" height="40"/>
+                                <rect key="frame" x="216" y="396" width="168" height="40"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zFs-fe-Lay">
                                         <rect key="frame" x="0.0" y="0.0" width="80" height="40"/>
@@ -250,7 +251,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="PFU-gI-IUG" firstAttribute="leading" secondItem="o78-QY-Mjn" secondAttribute="trailing" constant="8" id="406-6L-WPi"/>
-                            <constraint firstItem="7De-gU-j5J" firstAttribute="top" secondItem="d1M-8k-vMF" secondAttribute="bottom" constant="164" id="5Un-I2-NUg"/>
+                            <constraint firstItem="7De-gU-j5J" firstAttribute="top" secondItem="d1M-8k-vMF" secondAttribute="bottom" constant="184" id="5Un-I2-NUg"/>
                             <constraint firstItem="7De-gU-j5J" firstAttribute="leading" secondItem="XD7-Nf-Isa" secondAttribute="leading" constant="20" id="7k9-1W-hEH"/>
                             <constraint firstAttribute="trailing" secondItem="PFU-gI-IUG" secondAttribute="trailing" constant="20" id="9fu-gz-4Jg"/>
                             <constraint firstItem="rwa-Bd-D7T" firstAttribute="top" secondItem="DDU-0Z-x9S" secondAttribute="bottom" constant="8" id="9wF-w6-sRP"/>
@@ -269,7 +270,7 @@
                             <constraint firstItem="038-kF-zA1" firstAttribute="leading" secondItem="Yp2-ef-YXh" secondAttribute="trailing" constant="8" id="kOS-MQ-8sK"/>
                             <constraint firstItem="rwa-Bd-D7T" firstAttribute="leading" secondItem="aPe-2a-czL" secondAttribute="trailing" constant="8" id="kVv-Ej-xbf"/>
                             <constraint firstAttribute="trailing" secondItem="rwa-Bd-D7T" secondAttribute="trailing" constant="20" id="mUN-3P-GnC"/>
-                            <constraint firstItem="L16-jF-sFO" firstAttribute="top" secondItem="d1M-8k-vMF" secondAttribute="bottom" constant="30" id="pbN-Xd-KK6"/>
+                            <constraint firstItem="L16-jF-sFO" firstAttribute="top" secondItem="d1M-8k-vMF" secondAttribute="bottom" constant="50" id="pbN-Xd-KK6"/>
                             <constraint firstAttribute="trailing" secondItem="DDU-0Z-x9S" secondAttribute="trailing" constant="20" id="qQS-ot-NH2"/>
                             <constraint firstItem="DDU-0Z-x9S" firstAttribute="leading" secondItem="7De-gU-j5J" secondAttribute="trailing" constant="8" id="tUS-og-xo9"/>
                             <constraint firstItem="UIf-wU-Xb7" firstAttribute="centerX" secondItem="XD7-Nf-Isa" secondAttribute="centerX" id="xmS-Gy-j5W"/>
@@ -303,24 +304,17 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="ulj-oQ-xzK" detailTextLabel="vcg-ta-yVF" style="IBUITableViewCellStyleSubtitle" id="WG9-T1-u5P">
-                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="ulj-oQ-xzK" style="IBUITableViewCellStyleDefault" id="WG9-T1-u5P">
+                                        <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WG9-T1-u5P" id="7hJ-OZ-HtE">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ulj-oQ-xzK">
-                                                    <rect key="frame" x="15" y="5" width="32" height="20"/>
+                                                    <rect key="frame" x="15" y="0.0" width="570" height="43"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="vcg-ta-yVF">
-                                                    <rect key="frame" x="15" y="25" width="41" height="14"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -332,10 +326,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="42F-dy-flc" firstAttribute="leading" secondItem="yk2-HB-qDo" secondAttribute="leading" id="6Vr-rW-MOn"/>
-                            <constraint firstAttribute="trailing" secondItem="42F-dy-flc" secondAttribute="trailing" id="9Bz-hl-vJR"/>
-                            <constraint firstAttribute="bottom" secondItem="42F-dy-flc" secondAttribute="bottom" id="Lib-9P-paT"/>
-                            <constraint firstItem="42F-dy-flc" firstAttribute="top" secondItem="yk2-HB-qDo" secondAttribute="top" id="a4N-XK-Tck"/>
+                            <constraint firstAttribute="bottom" secondItem="42F-dy-flc" secondAttribute="bottom" id="2Qa-kJ-f0P"/>
+                            <constraint firstItem="42F-dy-flc" firstAttribute="top" secondItem="yk2-HB-qDo" secondAttribute="top" id="7Ky-Sa-Elg"/>
+                            <constraint firstItem="42F-dy-flc" firstAttribute="leading" secondItem="yk2-HB-qDo" secondAttribute="leading" id="EPw-Fx-6Rf"/>
+                            <constraint firstAttribute="trailing" secondItem="42F-dy-flc" secondAttribute="trailing" id="TaC-Mx-mfY"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Chats" image="icon_list.png" id="5qA-QJ-F5M" userLabel="Chats"/>
@@ -350,7 +344,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="3oQ-kU-pGN">
             <objects>
-                <tabBarController id="2D6-d4-Zvz" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="ORATabBarController" id="2D6-d4-Zvz" customClass="ORATabBarController" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" id="z7n-E0-RT6">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -363,7 +357,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I9x-jd-qvE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1928" y="463"/>
+            <point key="canvasLocation" x="1685" y="429"/>
         </scene>
         <!--Register View Controller-->
         <scene sceneID="QW9-Ap-Zf8">
